--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 Revision history for Perl extension Linux::WireGuard:
 
-0.02
+0.02 Mon 18 Jul 2022
 - Rename Wireguard -> WireGuard.
 - Make `endpoint` undef if there is no endpoint for a given peer.
 - Added add_device() and del_device().
